--- a/app/views/notice_mailer/invitation.html.erb
+++ b/app/views/notice_mailer/invitation.html.erb
@@ -3,5 +3,5 @@
 
 <p><%= @inviter.first_name %>으로부터 팀 <%=@team.teamname%>으로의 초대장이 도착하였습니다.</p>
 
-<a href="https://grouper2-hyunjunian-1.c9users.io/test/invitation?team=<%=@team.id%>">팀으로 가기</a>
+<a href="http://grouperbeta.com/users/sign_up?email=<%=@email%>&auth=<%=@auth%>">가입하기</a>
 <p>만약 현재 그루퍼에 로그인 되어있다면 로그아웃 후 초대장 링크를 열어주어야 팀에 들어갈 수 있습니다.</p>
