--- a/app/assets/stylesheets/html_erb_task.css
+++ b/app/assets/stylesheets/html_erb_task.css
@@ -52,7 +52,7 @@
 }
 .bar2-innertask:after{
     position: absolute;
-    right: 20%;
+    right: 80px;
     color: #0C0C0C;
     content: attr(data-task);
     font-size: 18px;
