--- a/app/views/message/show.html.erb
+++ b/app/views/message/show.html.erb
@@ -7,7 +7,7 @@
       <% temp = [] %>
       <% temp += @team.users.order(first_name: :asc) %>
         <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-          멤버 <small><%=temp.count%>명</small>
+          멤버 <small><%=temp.count%>명</small> <span class="glyphicon glyphicon-user" aria-hidden="true"></span> 
         </a>
       </h4>
     </div>
@@ -15,7 +15,7 @@
       <div class="panel-body">
         <div class="row">
           <div id="profile_me" class="col-sm-12">
-            <img id="img_setting" style="width: 20px; height: 20px;" class="img-circle" alt="profile" src="<%=current_user.image%>">
+            <img class="img-circle" alt="profile" src="<%=current_user.image%>" style="width: 35px; height: 35px;">
             <%=current_user.first_name%>
           </div>
         </div>
@@ -25,7 +25,7 @@
           <% if t.id != current_user.id %>
             <div class="row">
               <div id="profile<%=idx%>" class="col-sm-12">
-                <img id="img_setting" style="width: 20px; height: 20px;" class="img-circle" alt="profile" src="<%=t.image%>">
+                <img style="width: 35px; height: 35px;" class="img-circle" alt="profile" src="<%=t.image%>">
                 <%=t.first_name%>
               </div>
             </div>
@@ -49,7 +49,7 @@
         <div class="panel-heading" role="tab" id="headingTwo">
           <h4 class="panel-title">
             <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-              채팅방
+              채팅방 <span class="glyphicon glyphicon-comment" aria-hidden="true"></span> 
             </a>
           </h4>
         </div>
@@ -57,7 +57,7 @@
           <div class="panel-body">
           <div class="row" id="chat_top">
             <div class="col-sm-12">
-              <h5 style="color: #52D5CC">방 목록</h3>
+              <h5 style="color: #000"><span class="glyphicon glyphicon-th-list" aria-hidden="true"></span> 방 목록</h3>
             </div>
           </div>
           <% if @chat_side %>
@@ -72,14 +72,14 @@
                   <input type="hidden" name="chat" value="<%=chat.id%>">
                   <input type="hidden" name="team" value="<%=@team.id%>">
                   <%= hidden_field_tag :authenticity_token, form_authenticity_token -%>
-                  <button class=""type="submit"><span class="glyphicon glyphicon-log-out" aria-hidden="true"></span></button>
+                  <button class=""type="submit" style="float:right;"><span class="glyphicon glyphicon-log-out" aria-hidden="true"></span></button>
                 </form>
               </div>
             <% end %>
           <% end %>
           <div class="row">
             <div class="col-sm-2"></div>
-            <div class="col-sm-8"><button class="btn btn-new btn-xs" style="width: 100%;" type="button" data-toggle="collapse" data-placement="bottom" data-target="#addchatroom2" aria-expanded="false" aria-controls="addchatroom"><span class="glyphicon glyphicon-plus"></span></button></div>
+            <div class="col-sm-8"><button class="btn btn-new btn-xs" style="width: 100%;" type="button" data-toggle="collapse" data-placement="bottom" data-target="#addchatroom2" aria-expanded="false" aria-controls="addchatroom"><span class="glyphicon glyphicon-plus" data-toggle="tooltip" data-placement="bottom" title="채팅방 추가"></span></button></div>
           </div>
           <div class="row collapse" id="addchatroom2">
             <form action="/chat/create" method="post">
@@ -92,7 +92,7 @@
                   <div class="row" id="chat_top">
                     <div id="profile<%=idx%>" class="col-sm-12">
                       <aside style="padding-left: 12px;">
-                        <img id="img_setting" style="width: 20px; height: 20px;" class="img-circle" alt="profile" src="<%=t.image%>">
+                        <img id="img_setting" style="width: 35px; height: 35px;" class="img-circle" alt="profile" src="<%=t.image%>">
                       </aside>
                       <h5 style="color: black;"><%=t.first_name%></h5>
                       <%= check_box_tag('user_ids[]', t.id) %>
@@ -111,7 +111,7 @@
     <div class="panel-heading" role="tab" id="headingThree">
       <h4 class="panel-title">
         <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-          할일 분배
+          작업 분배 <span class="glyphicon glyphicon-hand-right" aria-hidden="true"></span> 
         </a>
       </h4>
     </div>
@@ -124,13 +124,13 @@
       <form action="/task/create" method="post">
         <div class="row" style="border-top: 1px solid #ccc; padding-left:10px; padding-right:10px; padding-top:10px;">
           <div class="form-group">
-              <label for="taskname_text"><span class="glyphicon glyphicon-briefcase" aria-hidden="true" style="padding-top: 2px; margin-right: 2px;"></span>Taskname</label>
+              <label for="taskname_text"><span class="glyphicon glyphicon-briefcase" aria-hidden="true" style="padding-top: 2px; margin-right: 2px;"></span>작업이름</label>
               <input type="text" class="form-control" name="taskname" id="taskname_text" placeholder="Give Your Task">
           </div>
         </div>
         
         <div class="row" style=" padding-left:10px; padding-right:10px;">
-          <label for="datetimepicker1"><span class="glyphicon glyphicon-calendar" aria-hidden="true" style="padding-top: 2px; margin-right: 2px;"></span>Duedate</label>
+          <label for="datetimepicker1"><span class="glyphicon glyphicon-calendar" aria-hidden="true" style="padding-top: 2px; margin-right: 2px;"></span>마감기한</label>
           <div class="form-group">
               <div class='input-group date' id='datetimepicker1'>
                 <input type='text' class="form-control" name="duedate"/>
@@ -142,7 +142,7 @@
         </div>
         <div class='row' style="padding-left:10px; padding-right:10px; padding-bottom:10px;">
           <button type="submit" value="send" class="btn btn-new btn-sm" aria-haspopup="true" aria-expanded="false" style="font-size: 13px;">
-            Enroll
+            등
           </button>
         </div>
         <script type="text/javascript">
@@ -192,8 +192,6 @@
     <div style="text-align:center">
       <h3><%=@chat.title %></h3>
     </div>
-
-
 
     <div class="row">
       <div class="col-sm-6">
@@ -281,9 +279,7 @@
           </div>
         </div>
 
-
         <script type="text/javascript">
-
           $(document).ready(function(){
             $("#fileupload").on('click',function(){
               this.value=null;
@@ -324,9 +320,6 @@
           }
         </script>
 
-
-
-
         <script>
           $(document).ready(function(){
             $("#inputGroupSuccess1").keydown(function(event){
@@ -336,7 +329,6 @@
                   $('#inputGroupSuccess1').val('');
                   return false;
                 }
-
             });
           });
         </script>
