--- a/app/views/message/show.html.erb
+++ b/app/views/message/show.html.erb
@@ -9,33 +9,12 @@
 
       <% @chat.messages.each do |message| %>
 
-        <div class="row messages">
-          <div class="col-sm-1">
-            <img src="<%= User.find(message.sender_id).image.url %>" alt="User.find(message.sender_id).first_name" class="img-circle" onmouseover="bigImg(this)" onmouseout="normalImg(this)" style="padding-top:2px; padding-left:2px" width="36px" height="36px">
-          </div>
-          <div class="col-sm-11">
-            <div id="message<%=message.id%>">
-              <strong><%=User.find(message.sender_id).first_name%></strong><br>
+        <%= sync partial: "newmessages", resource: message, scope: @chat %>
 
-
-              <%= sync partial: "readusers", resource: message, scope: @chat %>
-
-
-              <% if message.messagetype == 0 %>
-                <%=message.content%><br>
-              <% end %>
-              <% if message.messagetype == 1 %>
-                <a href="<%=message.imagemessage.imagemessageupload.url%>"><img class="imagemessageload" src="<%=message.imagemessage.imagemessageupload.url%>" style="padding: 10px; max-width: 70%; height: auto;"></a><br>
-              <% end %>
-              <% if message.messagetype == 2 %>
-                THIS CONTENT IS FILE!<br>
-              <% end %>
-
-            </div>
-          </div>
-        </div>
       <% end %>
+      <div id="unloadmessages">
 
+      </div>
       <%= sync_new partial: 'newmessages', resource: Message.new, scope: @chat%>
     </div>
 
@@ -172,13 +151,20 @@
     </div>
   </div>
 </div>
-<div id="messagelook"></div>
 <% if @chat.messages.count != 0 %>
   <form action="/message/updateall" method="put" data-remote=true id="messagelookall">
     <input type="hidden" name="message_id" value=<%=@chat.messages.last.id%>>
     <input type="hidden" name="chat_id" value=<%=@chat.id%>>
   </form>
 <% end %>
+
+
+<form action="/message/update" method="put" data-remote=true id="messagelook" class="newmessages">
+  <input id="messagelookid" type="hidden" name="message_id" value=<%=@chat.messages.count-1%>>
+  <input type="hidden" name="chat_id" value=<%=@chat.id%>>
+  <input type="hidden" name="user_id" value=<%=current_user.id%>>
+</form>
+
 
 <script>
   $(document).ready(function(){
@@ -187,12 +173,7 @@
         $("#message<%=@message.id%>").append("-----------여기까지 읽었습니다-----------");
 
     <% end %>
-    <% if current_user == @whiteboard.user && @whiteboard.edit == true %>
-      $("#whiteboardblock").removeAttr('disabled');
-      $("#whiteboardblock span").text("완료");
-      $("#whiteboardblock").attr('id', 'whiteboardsend');
-      $("#whiteboardarea").removeAttr('readonly');
-    <% end %>
+
 
     $("#whiteboardsend").click(function(){
       $("#whiteboardform").submit();
