--- a/app/views/message/show.html.erb
+++ b/app/views/message/show.html.erb
@@ -153,8 +153,9 @@
 </div>
 <% if @chat.messages.count != 0 %>
   <form action="/message/updateall" method="put" data-remote=true id="messagelookall">
-    <input type="hidden" name="message_id" value=<%=@chat.messages.last.id%>>
+    <input type="hidden" name="message_id" value="<%=@chat.messages.last.id%>" id="checkmessage">
     <input type="hidden" name="chat_id" value=<%=@chat.id%>>
+    <input type="hidden" name="isupdate" value="false" id="checkpoint">
   </form>
 <% end %>
 
@@ -168,10 +169,14 @@
 
 <script>
   $(document).ready(function(){
+
     <%if @message %>
         $('#chatbox').animate({ scrollTop: $('#message<%=@message.id%>').offset().top -200});
         $("#message<%=@message.id%>").append("-----------여기까지 읽었습니다-----------");
-
+        $('.imagemessage').load(function(){
+          $('#chatbox').animate({ scrollTop: $('#message<%=@message.id%>').offset().top -200});
+          alert("");
+        })
     <% end %>
 
 
