--- a/app/views/chat/show.html.erb
+++ b/app/views/chat/show.html.erb
@@ -1,12 +1,12 @@
 <div class="row">
-  <div class="col-sm-2" style="margin-top: 60px;">
+  <div class="col-sm-2">
     <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
       <div class="panel panel-default">
         <div class="panel-heading" role="tab" id="headingOne">
           <h4 class="panel-title">
-              <a href="/chat/show?team=<%=@team.id%>" data-parent="#accordion" aria-expanded="true" aria-controls="collapseOne" style="font-family: 'Jeju Gothic', sans-serif;">
-                팀 홈으로 가기<span class="glyphicon glyphicon-home" aria-hidden="true"></span>
-              </a>
+            <a href="/chat/show?team=<%=@team.id%>" data-parent="#accordion" aria-expanded="true" aria-controls="collapseOne" style="font-family: 'Jeju Gothic', sans-serif;">
+              팀 홈으로 가기<span class="glyphicon glyphicon-home" aria-hidden="true"></span>
+            </a>
           </h4>
         </div>
       </div>
@@ -16,147 +16,135 @@
           <% temp = [] %>
           <% temp += @team.users.order(first_name: :asc) %>
             <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-              멤버 <small><%=temp.count%>명</small> <span class="glyphicon glyphicon-user" aria-hidden="true"></span> 
+              멤버 <small><%=temp.count%>명</small> <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
             </a>
           </h4>
         </div>
         <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
-          <div class="panel-body">
+          <div class="panel-body" style="max-height: 300px;overflow: auto;">
             <div class="row">
-              <div id="profile_me" class="col-sm-12">
-                <img class="img-circle" alt="profile" src="<%=current_user.image%>" style="width: 35px; height: 35px;">
-                <%=current_user.first_name%>
-              </div>
-            </div>
-      
-            <!-- Others Profile -->
-            <% temp.each_with_index do |t,idx| %>
-              <% if t.id != current_user.id %>
-                <div class="row">
-                  <div id="profile<%=idx%>" class="col-sm-12">
-                    <img style="width: 35px; height: 35px;" class="img-circle" alt="profile" src="<%=t.image%>">
-                    <%=t.first_name%>
-                  </div>
-                </div>
-              <% end %>
-            <% end %>
-            <hr/>
-            <div class="row">
-              <div class="col-sm-2"></div>
-              <div class="col-sm-8">
+              <div class="col-sm-12">
                 <form action="/team/addmember" method="get">
                   <input type="hidden" name="team" value="<%=@team.id%>"/>
                   <button type="submit" class="btn btn-new btn-xs" style="width: 100%;" data-toggle="tooltip" data-placement="bottom" title="팀원 추가"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span></button>
                 </form>
+                <hr />
+              </div>
+              <div id="profile_me" class="col-sm-12">
+                <img class="img-circle" alt="profile" src="<%=current_user.image%>" style="width: 35px; height: 35px;">
+                <%=current_user.first_name%>
+                <% temp.each_with_index do |t,idx| %>
+                  <% if t.id != current_user.id %>
+                    <br><img style="width: 35px; height: 35px;" class="img-circle" alt="profile" src="<%=t.image%>">
+                    <%=t.first_name%>
+                  <% end %>
+                <% end %>
               </div>
             </div>
           </div>
         </div>
       </div>
 
-          <div class="panel panel-default">
-            <div class="panel-heading" role="tab" id="headingTwo">
-              <h4 class="panel-title">
-                <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                  채팅방 <span class="glyphicon glyphicon-comment" aria-hidden="true"></span> 
-                </a>
-              </h4>
-            </div>
-            <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
-              <div class="panel-body">
-              <% if @chat %>
-                <% @chat.each do |chat| %>
-                  <div class="row well well-sm">
-                    <form action ="/message/show" method="get">
-                      <input type="hidden" name="chat" value="<%=chat.id%>">
-                      <input type="hidden" name="team" value="<%=@team.id%>">
-                      <input class="btn btn-link" style="width: 100%;text-align: left;"type="submit" value="<%=chat.title%>">
-                    </form>
-                    <form action="/chat/deletemember" method="post">
-                      <input type="hidden" name="chat" value="<%=chat.id%>">
-                      <input type="hidden" name="team" value="<%=@team.id%>">
-                      <%= hidden_field_tag :authenticity_token, form_authenticity_token -%>
-                      <div class="row">
-                        <div class="col-md-9">
-                          <% chat.users.each do |inchat| %>
-                            <img class="img-circle" alt="profile" src="<%=inchat.image%>" style="width: 20px; height: 20px;">
-                          <% end %>
+      <div class="panel panel-default">
+        <div class="panel-heading" role="tab" id="headingTwo">
+          <h4 class="panel-title">
+            <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+              채팅방 <span class="glyphicon glyphicon-comment" aria-hidden="true"></span>
+            </a>
+          </h4>
+        </div>
+        <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo" >
+          <div class="panel-body" style="max-height: 300px;overflow: auto;">
+            <div class="row">
+              <div class="col-sm-12">
+                <div data-toggle="tooltip" data-placement="bottom" title="채팅방 추가">
+                  <button class="btn btn-new btn-xs" style="width: 100%;" type="button" data-toggle="collapse" data-placement="bottom" data-target="#addchatroom2" aria-expanded="false" aria-controls="addchatroom"><span class="glyphicon glyphicon-plus"></span></button>
+                </div>
+                <hr />
+                <% if @chat %>
+                  <% @chat.each do |chat| %>
+                    <div class="well well-sm">
+                      <form action ="/message/show" method="get">
+                        <input type="hidden" name="chat" value="<%=chat.id%>">
+                        <input type="hidden" name="team" value="<%=@team.id%>">
+                        <input class="btn btn-link" style="width: 100%;text-align: left;"type="submit" value="<%=chat.title%>">
+                      </form>
+                      <form action="/chat/deletemember" method="post">
+                        <input type="hidden" name="chat" value="<%=chat.id%>">
+                        <input type="hidden" name="team" value="<%=@team.id%>">
+                        <%= hidden_field_tag :authenticity_token, form_authenticity_token -%>
+                        <div class="row">
+                          <div class="col-sm-9">
+                            <% chat.users.each do |inchat| %>
+                              <img class="img-circle" alt="profile" src="<%=inchat.image%>" style="width: 20px; height: 20px;">
+                            <% end %>
+                          </div>
+                          <div class="col-sm-3">
+                            <button class=""type="submit" style="float:right;"><span class="glyphicon glyphicon-log-out" aria-hidden="true"></span></button>
+                          </div>
                         </div>
-                        <div class="col-md-3">
-                          <button class=""type="submit" style="float:right;"><span class="glyphicon glyphicon-log-out" aria-hidden="true"></span></button>
-                        </div>
-                      </div>
-                    </form>
-                  </div>
-                <% end %>
-              <% end %>
-              <div class="row">
-                <div class="col-sm-2"></div>
-                <div class="col-sm-8"><button class="btn btn-new btn-xs" style="width: 100%;" type="button" data-toggle="collapse" data-placement="bottom" data-target="#addchatroom2" aria-expanded="false" aria-controls="addchatroom"><span class="glyphicon glyphicon-plus" data-toggle="tooltip" data-placement="bottom" title="채팅방 추가"></span></button></div>
-              </div>
-              <div class="row collapse" id="addchatroom2">
-                <form action="/chat/create" method="post">
-                  <div id="chat_top" class="col-md-12">
-                    회의방 이름 <input type="text" name="title" required>
-                    <input type="hidden" name="team" value="<%=@team.id%>" style="width:100%;">
-                  </div>
-                  <% temp.each_with_index do |t,idx| %>
-                    <% if t.id != current_user.id %>
-                      <div class="row" id="chat_top">
-                        <div id="profile<%=idx%>" class="col-sm-12">
-                          <aside style="padding-left: 12px;">
-                            <img id="img_setting" style="width: 35px; height: 35px;" class="img-circle" alt="profile" src="<%=t.image%>">
-                          </aside>
-                          <h5 style="color: black;"><%=t.first_name%></h5>
-                          <%= check_box_tag('user_ids[]', t.id) %>
-                        </div>
-                      </div>
-                    <% end %>
+                      </form>
+                    </div>
                   <% end %>
-                  <%= hidden_field_tag :authenticity_token, form_authenticity_token -%>
-                </form>
+                <% end %>
               </div>
-              </div>
+            </div>
+            <div class="row collapse" id="addchatroom2">
+              <form action="/chat/create" method="post">
+                <div id="chat_top" class="col-md-12">
+                  <input  class="form-control" type="text" name="title" placeholder="방 이름 입력" required>
+                  <input type="hidden" name="team" value="<%=@team.id%>">
+                </div>
+                <% temp.each_with_index do |t,idx| %>
+                  <% if t.id != current_user.id %>
+                    <div class="row" id="chat_top">
+                      <div id="profile<%=idx%>" class="col-sm-12">
+                        <aside style="padding-left: 12px;">
+                          <img id="img_setting" style="width: 35px; height: 35px;" class="img-circle" alt="profile" src="<%=t.image%>">
+                        </aside>
+                        <h5 style="color: black;"><%=t.first_name%></h5>
+                        <%= check_box_tag('user_ids[]', t.id) %>
+                      </div>
+                    </div>
+                  <% end %>
+                <% end %>
+                <%= hidden_field_tag :authenticity_token, form_authenticity_token -%>
+              </form>
             </div>
           </div>
+        </div>
+      </div>
 
       <div class="panel panel-default">
         <div class="panel-heading" role="tab" id="headingThree">
           <h4 class="panel-title">
             <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-              작업 분배 <span class="glyphicon glyphicon-hand-right" aria-hidden="true"></span> 
+              작업 분배 <span class="glyphicon glyphicon-hand-right" aria-hidden="true"></span>
             </a>
           </h4>
         </div>
         <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
-          <div class="panel-body">
-            <div class="row">
-              <h3 style="color: #372727; padding-left: 10px"></h3>
-            </div>
-          
+          <div class="panel-body" style="max-height: 300px;overflow: auto;">
             <form action="/task/create" method="post">
-              <div class="row" style="border-top: 1px solid #ccc; padding-left:10px; padding-right:10px; padding-top:10px;">
-                <div class="form-group">
-                    <label for="taskname_text"><span class="glyphicon glyphicon-briefcase" aria-hidden="true" style="padding-top: 2px; margin-right: 2px;"></span>작업이름</label>
-                    <input type="text" class="form-control" name="taskname" id="taskname_text" placeholder="Give Your Task">
-                </div>
-              </div>
-              
-              <div class="row" style=" padding-left:10px; padding-right:10px;">
-                <label for="datetimepicker1"><span class="glyphicon glyphicon-calendar" aria-hidden="true" style="padding-top: 2px; margin-right: 2px;"></span>마감기한</label>
-                <div class="form-group">
+              <div class="row">
+                <div class="col-sm-12">
+                  <label for="taskname_text">작업이름</label>
+                  <input type="text" class="form-control" name="taskname" id="taskname_text" placeholder="작업의 이름 입력">
+                  <label for="datetimepicker1">마감기한</label>
+                  <div class="form-group">
                     <div class='input-group date' id='datetimepicker1'>
-                      <input type='text' class="form-control" name="duedate"/>
+                      <input type='text' class="form-control" placeholder="마감일 설정" name="duedate"/>
                       <span class="input-group-addon">
                         <span class="glyphicon glyphicon-calendar"></span>
                       </span>
                     </div>
+                  </div>
                 </div>
-              </div>
-              <div class='row' style="padding-left:10px; padding-right:10px; padding-bottom:10px;">
-                <button type="submit" value="send" class="btn btn-new btn-sm" aria-haspopup="true" aria-expanded="false" style="font-size: 13px;">
-                  등록
-                </button>
+                <div class="col-sm-12">
+                  <button type="submit" value="send" class="btn btn-new btn-sm" aria-haspopup="true" aria-expanded="false" style="width: 100%">
+                    일 분배
+                  </button>
+                </div>
               </div>
               <script type="text/javascript">
                 $(function () {
@@ -165,21 +153,19 @@
                   });
                 });
               </script>
-              
+
               <!-- My Profile -->
-              <div class="row" style="border-top: 1px solid #ccc; padding-top: 5px">
+              <div class="row">
                 <div class="col-sm-10">
                   <img class="img-circle" alt="profile" src="<%=current_user.image%>" style="width: 35px; height: 35px;">
                   <%=current_user.first_name%>
                 </div>
-                <div id="profile_me" class="col-sm-2">
+                <div id="profile_me" class="col-sm-2 checkbox">
                   <%= check_box_tag('user_ids[]', current_user.id) %><br />
                 </div>
               </div>
-              
+
               <!-- Others Profile -->
-              <div class="row" id="chat_top">
-              </div>
               <% temp.each_with_index do |t,idx| %>
                 <% if t.id != current_user.id %>
                   <div class="row">
@@ -188,8 +174,9 @@
                       <%=t.first_name%>
                     </div>
                     <div id="profile_me" class="col-sm-2">
-                      <%= check_box_tag('user_ids[]', t.id) %><br />
+                      <%= check_box_tag('user_ids[]', t.id) %>
                     </div>
+                  </div>
                 <% end %>
               <% end %>
               <%= hidden_field_tag :authenticity_token, form_authenticity_token -%>
@@ -199,7 +186,7 @@
         </div>
       </div>
     </div>
-  </div></div>
+  </div>
 
 
 <!-- Homebody for Notification or Something others -->
@@ -214,20 +201,20 @@
       <div class="collapse" id="belong">
         <form class="form-inline" action="/team/change_etc1" method="post" enctype="multipart/form-data">
           <%= hidden_field_tag :authenticity_token, form_authenticity_token -%>
-          <%= hidden_field_tag "team", @team.id %> 
+          <%= hidden_field_tag "team", @team.id %>
           <input class="form-control" type="text" name="belong" placeholder="팀 소속 입력 후 엔터" required>
         </form>
       </div>
     </div>
     <br>
-    
+
     <!-- Nav tabs -->
     <ul class="nav nav-tabs" role="tablist" style="padding-left: 70px;">
       <!--<li role="presentation" class="active"><a href="#taskcalendar" aria-controls="home" role="tab" data-toggle="tab">Schedule</a></li>-->
       <li role="presentation" class="active"><a href="#tasklist" aria-controls="home" role="tab" data-toggle="tab">나의 할일</a></li>
       <li role="presentation"><a href="#taskindiv" aria-controls="home" role="tab" data-toggle="tab">팀 상황</a></li>
     </ul>
-    
+
     <!-- Tab panes -->
     <div class="tab-content">
       <!--<div role="tabpanel" class="tab-pane active" id="taskcalendar">
@@ -245,12 +232,12 @@
           <div id="cal-frame">
             <table class="curr">
                 <tbody>
-                    <tr><td class="nil"></td><td class="nil"></td><td class="nil"></td><td class="nil"></td><td class="nil"></td><td>1</td><td>2</td></tr> 
-                    <tr><td>3</td><td>4</td><td>5</td><td>6</td><td>7</td><td class="today">8</td><td>9</td></tr> 
-                    <tr><td>10</td><td>11</td><td>12</td><td>13</td><td>14</td><td>15</td><td>16</td></tr> 
-                    <tr><td>17</td><td>18</td><td>19</td><td>20</td><td>21</td><td>22</td><td>23</td></tr> 
-                    <tr><td>24</td><td>25</td><td>26</td><td>27</td><td>28</td><td>29</td><td>30</td></tr> 
-                </tbody> 
+                    <tr><td class="nil"></td><td class="nil"></td><td class="nil"></td><td class="nil"></td><td class="nil"></td><td>1</td><td>2</td></tr>
+                    <tr><td>3</td><td>4</td><td>5</td><td>6</td><td>7</td><td class="today">8</td><td>9</td></tr>
+                    <tr><td>10</td><td>11</td><td>12</td><td>13</td><td>14</td><td>15</td><td>16</td></tr>
+                    <tr><td>17</td><td>18</td><td>19</td><td>20</td><td>21</td><td>22</td><td>23</td></tr>
+                    <tr><td>24</td><td>25</td><td>26</td><td>27</td><td>28</td><td>29</td><td>30</td></tr>
+                </tbody>
             </table>
           </div>
         </div>
@@ -337,7 +324,7 @@
           <% end %>
         <% end %>
       <% end %>
-      
+
       <script>
         function ganttfn(){
             (function(document) {
