--- a/app/views/message/show.html.erb
+++ b/app/views/message/show.html.erb
@@ -239,8 +239,53 @@
       <div class="row">
         <div class="col-md-12">
           <% @chat.users.each do |inchat| %>
-            <img class="img-circle" alt="profile" src="<%=inchat.image%>" style="width: 25px; height: 25px;"> <%=inchat.first_name%>
+            <img class="img-circle" alt="profile" src="<%=inchat.image%>" data-toggle="tooltip" data-placement="bottom" title="<%=inchat.first_name%>" style="width: 25px; height: 25px;">
           <% end %>
+          <span data-toggle="tooltip" data-placement="bottom" title="멤버 초대" ><button class="btn btn-new btn-xs" data-toggle="modal" data-target="#addmember2" type="button" type="button" ><span class="glyphicon glyphicon-plus"></span></button></span>
+
+
+
+
+
+
+          <div id="addmember2" class="modal fade bs-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel">
+            <div class="modal-dialog modal-sm">
+
+              <div class="modal-content">
+                <div class="modal-header">
+                  멤버 초대
+                </div>
+
+                <form action="/chat/addmember" method="post">
+                  <div class="modal-body row">
+                    <input type="hidden" name="chat" value="<%=@chat.id%>">
+                    <input type="hidden" name="team" value="<%=@team.id%>">
+                    <%= hidden_field_tag :authenticity_token, form_authenticity_token -%>
+
+                    <% @team.users.each do |user| %>
+                      <% if !@chat.users.include?(user)%>
+                        <div class="col-sm-10">
+                          <img class="img-circle" alt="profile" src="<%=user.image%>" style="width: 35px; height: 35px;">
+                          <%=user.first_name%>
+                        </div>
+                        <div id="profile_me" class="col-sm-2 checkbox">
+                          <%= check_box_tag('user_ids[]', user.id) %>
+                        </div>
+                      <% end %>
+                    <% end %>
+                  </div>
+                  <div class="modal-footer">
+                    <button type="submit" value="send" class="btn btn-new btn-sm" aria-haspopup="true" aria-expanded="false" style="width: 100%">
+                      초대
+                    </button>
+                  </div>
+                </form>
+              </div>
+            </div>
+          </div>
+
+
+
         </div>
       </div>
     </div>
