team detail info, sidebar alignment column, ganttbar alignment column, showtask position, navbar whiteboard, naegahalil alginment @media

--- a/app/assets/stylesheets/bootstrap-customized_button.css
+++ b/app/assets/stylesheets/bootstrap-customized_button.css
@@ -10,3 +10,12 @@
 .btn-trans{
   color: white;
 }
+
+.btn-bel{
+  background-color: black;
+  color: white;
+}
+.btn-loc{
+  background-color: gray;
+  color: white;
+}
