--- a/app/views/chat/show.html.erb
+++ b/app/views/chat/show.html.erb
@@ -74,11 +74,13 @@
                     <% if t.id != current_user.id %>
                       <div id="profile<%=idx%>">
                         <div class="row">
-                          <div class="col-sm-10">
+                          <div class="col-xs-3">
                             <img class="img-circle" alt="profile" src="<%=t.image%>" style="width: 35px; height: 35px;">
+                          </div>
+                          <div class="col-xs-6">
                             <%=t.first_name%>
                           </div>
-                          <div id="profile_me" class="col-sm-2 checkbox">
+                          <div id="profile_me" class="col-xs-3 checkbox">
                             <%= check_box_tag('user_ids[]', t.id) %>
                           </div>
                         </div>
@@ -112,7 +114,7 @@
                         <div class="row">
                           <div class="col-sm-9">
                             <% chat.users.each do |inchat| %>
-                              <img class="img-circle" data-toggle="tooltip" data-placement="top" title="<%=inchat.first_name%>" src="<%=inchat.image%>" style="width: 20px; height: 20px;">
+                              <img class="img-circle" data-toggle="tooltip" data-placement="right" title="<%=inchat.first_name%>" src="<%=inchat.image%>" style="width: 20px; height: 20px;">
                             <% end %>
                           </div>
                           <div class="col-sm-3">
@@ -141,9 +143,10 @@
           <div class="panel-body" style="max-height: 300px;overflow: auto;">
             <div class="row">
               <div class="col-sm-12">
-                <button class="btn btn-new btn-xs" style="width: 100%;"type="button" data-toggle="collapse" data-target="#givetask" aria-expanded="false" aria-controls="collapseExample">
-                  <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
-                </button>
+                <div data-toggle="tooltip" data-placement="bottom" title="작업 추가">
+                  <button class="btn btn-new btn-xs" style="width: 100%;" type="button" data-toggle="collapse" data-target="#givetask" aria-expanded="false" aria-controls="collapseExample">
+                  <span class="glyphicon glyphicon-plus" aria-hidden="true"></span></button>
+                </div>
               </div>
             </div>
             <div class="row collapse" id="givetask">
@@ -170,24 +173,28 @@
                   });
                 </script>
                 <!-- My Profile -->
-                <div class="col-sm-10">
+                <div class="col-xs-3">
                   <img class="img-circle" alt="profile" src="<%=current_user.image%>" style="width: 35px; height: 35px;">
+                </div>
+                <div class="col-xs-6">
                   <%=current_user.first_name%>
                 </div>
-                <div id="profile_me" class="col-sm-2 checkbox">
+                <div id="profile_me" class="col-xs-3 checkbox">
                   <%= check_box_tag('user_ids[]', current_user.id) %><br />
                 </div>
 
                 <!-- Others Profile -->
                 <% temp.each_with_index do |t,idx| %>
                   <% if t.id != current_user.id %>
-                      <div class="col-sm-10">
-                        <img class="img-circle" alt="profile" src="<%=t.image%>" style="width: 35px; height: 35px;">
-                        <%=t.first_name%>
-                      </div>
-                      <div id="profile_me" class="col-sm-2 checkbox">
-                        <%= check_box_tag('user_ids[]', t.id) %>
-                      </div>
+                    <div class="col-xs-3">
+                      <img class="img-circle" alt="profile" src="<%=t.image%>" style="width: 35px; height: 35px;">
+                    </div>
+                    <div class="col-xs-6">
+                      <%=t.first_name%>
+                    </div>
+                    <div id="profile_me" class="col-xs-3 checkbox">
+                      <%= check_box_tag('user_ids[]', t.id) %>
+                    </div>
                   <% end %>
                 <% end %>
                 <%= hidden_field_tag :authenticity_token, form_authenticity_token -%>
@@ -233,22 +240,35 @@
   <div class="col-sm-10">
     <div class="row">
       <aside style="padding-left: 12px; padding-top: 12px;">
-        <img class="img-rounded" alt="profile" src="/favicon.ico" width="100px" height="100px">
+      <img class="img-rounded" alt="profile" src="/favicon.ico" width="100px" height="100px" style="float: left; margin-right: 12px; margin-top: 13px;">
       </aside>
-      <h2><%=@team.teamname%></h2>
-      <h4 data-toggle="collapse" href="#belong" aria-expanded="false" aria-controls="name" style="text-decoration: none;"> <span class="glyphicon glyphicon-education" aria-hidden="true"></span> <%=@team.belong%></h4>
-      <h5 style="color: gray;"> <span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span> </h5>
+      <h2> <%=@team.teamname%></h2>
+
+      <h4 data-toggle="collapse" aria-expanded="false" aria-controls="name" style="font-size: 15px; text-decoration: none;"> <span class="glyphicon glyphicon-education" aria-hidden="true"></span> <%=@team.belong%>
+      <button class="btn btn-bel btn-xs" type="button" data-toggle="collapse" data-placement="bottom" data-target="#belong" aria-expanded="false" aria-controls="belong"><span class="glyphicon glyphicon-pencil"></span></button></h4>
+      
+      <h5 data-toggle="collapse" aria-expanded="false" aria-controls="name" style="font-size: 13px; color: gray;"> <span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span> <%=@team.location%>
+      <button class="btn btn-loc btn-xs" type="button" data-toggle="collapse" data-placement="bottom" data-target="#location" aria-expanded="false" aria-controls="location"><span class="glyphicon glyphicon-pencil"></span></button></h5>
+      
+
       <div class="collapse" id="belong">
         <form class="form-inline" action="/team/change_etc1" method="post" enctype="multipart/form-data">
           <%= hidden_field_tag :authenticity_token, form_authenticity_token -%>
-          <%= hidden_field_tag "team", @team.id %>
-          <input class="form-control" type="text" name="belong" placeholder="팀 소속 입력 후 엔터" required>
+          <%= hidden_field_tag "team", @team.id %> 
+          <input class="form-control" type="text" name="belong" placeholder="팀 소속 입력 후 엔터" style="margin-left: 120px;" required>
+        </form>
+      </div>
+      <div class="collapse" id="location">
+        <form class="form-inline" action="/team/change_etc2" method="post" enctype="multipart/form-data">
+          <%= hidden_field_tag :authenticity_token, form_authenticity_token -%>
+          <%= hidden_field_tag "team", @team.id %> 
+          <input class="form-control" type="text" name="location" placeholder="지역 입력 후 엔터" style="margin-left: 120px;" required>
         </form>
       </div>
     </div>
 
     <!-- Nav tabs -->
-    <ul class="nav nav-tabs" role="tablist" style="padding-left: 70px;">
+    <ul class="nav nav-tabs" role="tablist" style="padding-left: 70px; margin-top: 20px;">
       <!--<li role="presentation" class="active"><a href="#taskcalendar" aria-controls="home" role="tab" data-toggle="tab">Schedule</a></li>-->
       <li role="presentation" class="active"><a href="#tasklist" aria-controls="home" role="tab" data-toggle="tab">나의 할일</a></li>
       <li role="presentation"><a href="#taskindiv" aria-controls="home" role="tab" data-toggle="tab">팀 상황</a></li>
@@ -292,7 +312,7 @@
         <div class="bar2">
           <% for j in 0..11 %>
             <% a = Date.today + j %>
-            <div class="col-md-1"><%=a.strftime("%m/%d") %></div>
+            <div class="col-xs-1"><%=a.strftime("%m/%d") %></div>
           <% end %>
         </div>
         <% current_user.tasks.where(:team_id => @team.id).order(duedate: :asc).each_with_index do |b,i| %>
@@ -319,7 +339,7 @@
         <div class="bar2">
           <%for i in 0..11 %>
             <% a = Date.today + i %>
-            <div class="col-md-1"><%=a.strftime("%m/%d") %></div>
+            <div class="col-xs-1"><%=a.strftime("%m/%d") %></div>
           <% end %>
         </div>
         <% temp = [] %>
