--- a/app/views/message/show.html.erb
+++ b/app/views/message/show.html.erb
@@ -74,11 +74,13 @@
                     <% if t.id != current_user.id %>
                       <div id="profile<%=idx%>">
                         <div class="row">
-                          <div class="col-sm-10">
+                          <div class="col-xs-3">
                             <img class="img-circle" alt="profile" src="<%=t.image%>" style="width: 35px; height: 35px;">
+                          </div>
+                          <div class="col-xs-6">
                             <%=t.first_name%>
                           </div>
-                          <div id="profile_me" class="col-sm-2 checkbox">
+                          <div id="profile_me" class="col-xs-3 checkbox">
                             <%= check_box_tag('user_ids[]', t.id) %>
                           </div>
                         </div>
@@ -141,9 +143,11 @@
           <div class="panel-body" style="max-height: 300px;overflow: auto;">
             <div class="row">
               <div class="col-sm-12">
-                <button class="btn btn-new btn-xs" style="width: 100%;"type="button" data-toggle="collapse" data-target="#givetask" aria-expanded="false" aria-controls="collapseExample">
-                  <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
-                </button>
+                <div data-toggle="tooltip" data-placement="bottom" title="작업 추가">
+                  <button class="btn btn-new btn-xs" style="width: 100%;" type="button" data-toggle="collapse" data-target="#givetask" aria-expanded="false" aria-controls="collapseExample">
+                  <span class="glyphicon glyphicon-plus" aria-hidden="true"></span></button>
+                </div>
+              </div>
               </div>
             </div>
             <div class="row collapse" id="givetask">
@@ -170,24 +174,28 @@
                   });
                 </script>
                 <!-- My Profile -->
-                <div class="col-sm-10">
+                <div class="col-xs-3">
                   <img class="img-circle" alt="profile" src="<%=current_user.image%>" style="width: 35px; height: 35px;">
+                </div>
+                <div class="col-xs-6">
                   <%=current_user.first_name%>
                 </div>
-                <div id="profile_me" class="col-sm-2 checkbox">
+                <div id="profile_me" class="col-xs-3 checkbox">
                   <%= check_box_tag('user_ids[]', current_user.id) %><br />
                 </div>
 
                 <!-- Others Profile -->
                 <% temp.each_with_index do |t,idx| %>
                   <% if t.id != current_user.id %>
-                      <div class="col-sm-10">
-                        <img class="img-circle" alt="profile" src="<%=t.image%>" style="width: 35px; height: 35px;">
-                        <%=t.first_name%>
-                      </div>
-                      <div id="profile_me" class="col-sm-2 checkbox">
-                        <%= check_box_tag('user_ids[]', t.id) %>
-                      </div>
+                    <div class="col-xs-3">
+                      <img class="img-circle" alt="profile" src="<%=t.image%>" style="width: 35px; height: 35px;">
+                    </div>
+                    <div class="col-xs-6">
+                      <%=t.first_name%>
+                    </div>
+                    <div id="profile_me" class="col-xs-3 checkbox">
+                      <%= check_box_tag('user_ids[]', t.id) %>
+                    </div>
                   <% end %>
                 <% end %>
                 <%= hidden_field_tag :authenticity_token, form_authenticity_token -%>
